--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Assignment Challenge 3: Aplikasi CLI untuk tracking kebiasaan harian",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "solution": "node app-solution.js",
-    "test": "echo \"Run: node app.js to start the application\""
+  "start": "node app-template.js",
+  "solution": "node app-solution.js",
+  "test": "echo \"Run: node app-template.js to start the application\""
+
   },
   "keywords": [
     "habit-tracker",
